objects/Connector__c.object
<CustomObject>
    <description>Definition : Connector between bFO and one or several System(s)
Usage : Knowledge Management on Connectors

Within PANDA Project Management App</description>
    <fields>
        <fullName>API_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>API User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>API_s_used__c</fullName>
        <label>API(s) used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOAP API</fullName>
                </value>
                <value>
                    <fullName>REST API</fullName>
                </value>
                <value>
                    <fullName>BULK API</fullName>
                </value>
                <value>
                    <fullName>METADATA API</fullName>
                </value>
                <value>
                    <fullName>STREAMING API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_scope_delivered__c</fullName>
        <label>Business scope delivered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Connected_App__c</fullName>
        <label>Connected App</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector_type__c</fullName>
        <label>Connector type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catalog Connector (Core)</fullName>
                </value>
                <value>
                    <fullName>Specific Connector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <label>Critical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Scope__c</fullName>
        <label>Deployment scope (BU, Country)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_System__c</fullName>
        <label>End-Point System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>Specify &quot;On-Demand&quot; Or Batch Frequency</inlineHelpText>
        <label>On Demand / Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Object_Solution_Lead__c</fullName>
        <formula>Main_bFO_Object__r.Solution_Owner__c</formula>
        <label>Main Object Solution Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_bFO_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main bFO Object</label>
        <referenceTo>bFO_Object__c</referenceTo>
        <relationshipLabel>Connectors Related as Main Object</relationshipLabel>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middleware_Coresystems_involved__c</fullName>
        <label>Middleware&amp;Coresystems involved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cordys Middleware</fullName>
                </value>
                <value>
                    <fullName>BEM Middleware</fullName>
                </value>
                <value>
                    <fullName>SDH</fullName>
                </value>
                <value>
                    <fullName>BSL Middleware for cKM/Inquira</fullName>
                </value>
                <value>
                    <fullName>Motwin Middleware Mobile</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>IFW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objects_Read__c</fullName>
        <label>Objects Read</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Line</fullName>
                </value>
                <value>
                    <fullName>Opportunity Team</fullName>
                </value>
                <value>
                    <fullName>Opportunity Contact Roles</fullName>
                </value>
                <value>
                    <fullName>Opportunity Value Chain Players</fullName>
                </value>
                <value>
                    <fullName>Work order</fullName>
                </value>
                <value>
                    <fullName>Work order group</fullName>
                </value>
                <value>
                    <fullName>Other(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objects_written__c</fullName>
        <label>Objects written</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Line</fullName>
                </value>
                <value>
                    <fullName>Opportunity Team</fullName>
                </value>
                <value>
                    <fullName>Opportunity Contact Roles</fullName>
                </value>
                <value>
                    <fullName>Opportunity Value Chain Players</fullName>
                </value>
                <value>
                    <fullName>Work order</fullName>
                </value>
                <value>
                    <fullName>Work order group</fullName>
                </value>
                <value>
                    <fullName>Other(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Object_s_Read__c</fullName>
        <label>Other Object(s) Read</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Object_s_written__c</fullName>
        <label>Other Object(s) written</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Third party</fullName>
                </value>
                <value>
                    <fullName>Schneider</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Appexchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specification_folder_Link__c</fullName>
        <label>Specification folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Under implementation</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Not authorized</fullName>
                </value>
                <value>
                    <fullName>Oauth (non Connected App)</fullName>
                </value>
                <value>
                    <fullName>Connected App</fullName>
                </value>
                <value>
                    <fullName>Decommissioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSDL__c</fullName>
        <label>WSDL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner WSDL</fullName>
                </value>
                <value>
                    <fullName>Enterprise WSDL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Connector</label>
    <listViews>
        <fullName>Account_Contact_Connectors</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Main_bFO_Object__c</columns>
        <columns>Middleware_Coresystems_involved__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>anish</value>
        </filters>
        <label>Account Contact Connectors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Connector_type__c</columns>
        <columns>Middleware_Coresystems_involved__c</columns>
        <columns>Connected_App__c</columns>
        <columns>Vendor__c</columns>
        <columns>Main_bFO_Object__c</columns>
        <columns>Business_scope_delivered__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTI_Connectors</fullName>
        <columns>NAME</columns>
        <columns>API_User__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Status__c</columns>
        <columns>Specification_folder_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Point_System__c</field>
            <operation>equals</operation>
            <value>CTI</value>
        </filters>
        <label>CTI Connectors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Connected_Apps</fullName>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>Connected_App__c</columns>
        <columns>Connector_type__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Main_Object_Solution_Lead__c</columns>
        <columns>Vendor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Connected App</value>
        </filters>
        <label>Connected Apps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Connectors_CCC</fullName>
        <columns>NAME</columns>
        <columns>Connector_type__c</columns>
        <columns>Critical__c</columns>
        <columns>Deployment_Scope__c</columns>
        <columns>Middleware_Coresystems_involved__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Anca,Laszlo,Alexandre,Jean-Cyrile,Michael,Pooja</value>
        </filters>
        <label>Connectors CCC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Email_Connectors</fullName>
        <columns>NAME</columns>
        <columns>API_User__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Status__c</columns>
        <columns>Specification_folder_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Lotus,Outlook</value>
        </filters>
        <label>Email Connectors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IDMS</fullName>
        <columns>NAME</columns>
        <columns>Connected_App__c</columns>
        <columns>Connector_type__c</columns>
        <columns>Critical__c</columns>
        <columns>Other_Object_s_Read__c</columns>
        <columns>Other_Object_s_written__c</columns>
        <columns>Main_Object_Solution_Lead__c</columns>
        <columns>Main_bFO_Object__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Connected_App__c</field>
            <operation>contains</operation>
            <value>IDMS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Connected App</value>
        </filters>
        <label>IDMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SAP</fullName>
        <columns>NAME</columns>
        <columns>Connected_App__c</columns>
        <columns>Connector_type__c</columns>
        <columns>Description__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Main_bFO_Object__c</columns>
        <columns>Middleware_Coresystems_involved__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SAP</value>
        </filters>
        <label>SAP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_connectors</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Main_bFO_Object__c</columns>
        <columns>Middleware_Coresystems_involved__c</columns>
        <columns>End_Point_System__c</columns>
        <columns>Vendor__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>ljiljana</value>
        </filters>
        <label>Sales connectors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Connector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>